# solana-groth16-verifier-template

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: audit.yml  release-plz.yml  rolling.yml  rust_lint.yml  rust_test.yml
ark-serde-compat/: CHANGELOG.md  Cargo.toml  README.md
ark-serde-compat/src/: babyjubjub.rs  impl_macro.rs  lib.rs  macro.rs
circom-types/: Cargo.toml
circom-types/src/: binfile.rs  lib.rs  r1cs.rs  traits.rs  witness.rs
circom-types/src/groth16/: mod.rs  proof.rs  public_input.rs  verification_key.rs  zkey.rs
circom-types/src/plonk/: mod.rs  proof.rs  verification_key.rs  zkey.rs
groth16/: Cargo.toml
groth16-material/: Cargo.toml
groth16-material/src/: circom.rs  lib.rs
groth16-material/src/circom/: proof_input.rs
groth16-sol/: Cargo.toml
groth16-sol/data/: gnark_output.txt  test_verification_key.json
groth16-sol/src/: lib.rs
groth16-sol/templates/: bn254_verifier.rs  bn254_verifier.sol  bn254_verifier.sol.tmpl
