[workspace]
resolver = "3"
members = ["ark-serde-compat", "circom-types", "groth16-sol"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
homepage = "https://taceo.io/"
repository = "https://github.com/TaceoLabs/circom-helpers"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5" }
ark-bls12-381 = "0.5"
ark-bn254 = { version = "0.5" }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-groth16 = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-relations = { version = "0.5", default-features = false }
ark-serde-compat = { package = "taceo-ark-serde-compat", path = "ark-serde-compat", version = "0.3", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-std = "0.5"
bincode = "2.0.1"
byteorder = "1.5"
ciborium = "0.2.2"
circom-types = { package = "taceo-circom-types", path = "circom-types", version = "0.1" }
circom-witness-rs = "0.2.2"
clap = { version = "4.4.8", features = ["derive"] }
eyre = "0.6"
groth16 = { package = "taceo-groth16", path = "groth16", version = "0.1" }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
rayon = "1.8"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls"
] }
ruint = "1.17"
serde = { version = "1.0" }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = false

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
