[package]
name = "taceo-ark-serde-compat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = true
readme = "./README.md"
description = "Various serde compatibility implementations for arkworks-rs types, including serializing to strings for use in human-readable JSON. The design choices are heavily influenced to work with circom."

[features]
default = []
bn254 = ["dep:ark-bn254"]
bls12-381 = ["dep:ark-bls12-381"]
babyjubjub = ["dep:taceo-ark-babyjubjub"]

[dependencies]
ark-bls12-381 = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
serde.workspace = true
taceo-ark-babyjubjub = { workspace = true, optional = true }
