[package]
name = "taceo-circom-types"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
description = "This crate provides a Rust representation of the types in the `Circom` ecosystem and ways to de/serialize them in a way that is compatible to the existing implementation in snarkjs."
readme = "./README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["circom", "groth16", "plonk", "zero-knowledge", "zk"]
exclude = ["/kats", "CHANGELOG.md"]

[package.metadata.cargo-all-features]
skip_feature_sets = [
  ["full-groth16", "full-plonk"],
]
denylist = ["parallel", "bin", "full", "bls12-381"]
always_include_features = ["bn254"]
max_combination_size = 3

[dependencies]
ark-bls12-381 = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-ec = { workspace = true, optional = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true, optional = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true, optional = true }
ark-serde-compat = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true, optional = true }
byteorder = { workspace = true }
clap = { workspace = true, features = ["env"], optional = true }
eyre = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[dev-dependencies]
num-bigint = { workspace = true }

[features]
default = ["bn254", "full-groth16", "parallel"]
bin = [
  "bn254",
  "dep:clap",
  "dep:eyre",
  "dep:tracing-subscriber",
  "groth16",
  "zkey"
]
bls12-381 = ["ark-serde-compat/bls12-381", "dep:ark-bls12-381"]
bn254 = ["ark-serde-compat/bn254", "dep:ark-bn254", "dep:ark-ec", "dep:ark-std"]
full = ["bls12-381", "bn254", "full-groth16", "full-plonk"]
full-groth16 = [
  "groth16",
  "proof",
  "public-input",
  "r1cs",
  "verification-key",
  "witness",
  "zkey"
]
full-plonk = [
  "plonk",
  "proof",
  "public-input",
  "r1cs",
  "verification-key",
  "witness",
  "zkey"
]
groth16 = []
parallel = ["dep:rayon"]
plonk = []
proof = ["dep:ark-ec", "dep:ark-groth16"]
public-input = []
r1cs = ["dep:ark-std", "dep:ark-ec"]
verification-key = ["dep:ark-ec", "dep:ark-groth16"]
witness = []
zkey = ["dep:ark-ec", "dep:ark-groth16", "dep:ark-relations"]
