[package]
name = "groth16-material"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "A collection of utilities for generating witnesses and proofs for Groth16 circuits. Supports Circom circuits for now."
readme = "./README.md"

[package.metadata.cargo-all-features]
skip_feature_sets = [
  ["circom", "noir"],
  ["reqwest", "reqwest-blocking"],
]
max_combination_size = 2

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true, optional = true }
circom-types = { workspace = true, features = ["bn254", "groth16", "zkey"] }
circom-witness-rs = { workspace = true, optional = true }
eyre = { workspace = true }
groth16 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
ruint = { workspace = true, optional = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = ["circom"]
circom = [
  "dep:ark-serialize",
  "dep:circom-witness-rs",
  "dep:ruint"
]
full = ["circom", "noir"]
noir = []
reqwest = ["dep:reqwest"]
reqwest-blocking = ["reqwest/blocking"]
