[package]
name = "groth16-sol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-groth16.workspace = true
askama = "0.14.0"
eyre.workspace = true

[dev-dependencies]
taceo-circom-types = "0.1"
serde_json.workspace = true
