[package]
name = "taceo-groth16"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "An implementation of the Groth16 zkSNARK proof system."
readme = "./README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["circom", "groth16", "snarkjs", "zero-knowledge", "zk"]
exclude = [".gitignore"]

[[bench]]
harness = false
name = "groth16"

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16 = { workspace = true, features = ["parallel"] }
ark-poly.workspace = true
ark-relations.workspace = true
eyre.workspace = true
num-traits.workspace = true
rayon.workspace = true
tracing.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
ark-circom = "0.5"
ark-snark = "0.5.0"
ark-std.workspace = true
criterion = "0.8"
